Add logging Optimization Refactoring